@@ -1,8 +1,7 @@
 package com.programming.techie.springredditclone.service;
 
 import com.programming.techie.springredditclone.dto.CommentsDto;
-import com.programming.techie.springredditclone.exceptions.PostNotFoundException;
-import com.programming.techie.springredditclone.exceptions.SpringRedditException;
+import com.programming.techie.springredditclone.exceptions.PostNotFoundEXception;
 import com.programming.techie.springredditclone.mapper.CommentMapper;
 import com.programming.techie.springredditclone.model.Comment;
 import com.programming.techie.springredditclone.model.NotificationEmail;
@@ -16,6 +15,9 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.*;
 
 @Service
 @AllArgsConstructor
@@ -26,43 +28,39 @@ public class CommentService {
     private final AuthService authService;
     private final CommentMapper commentMapper;
     private final CommentRepository commentRepository;
-    private final MailContentBuilder mailContentBuilder;
     private final MailService mailService;
-
+    private final MailContentBuilder mailContentBuilder;
     public void save(CommentsDto commentsDto) {
-        Post post = postRepository.findById(commentsDto.getPostId())
-                .orElseThrow(() -> new PostNotFoundException(commentsDto.getPostId().toString()));
-        Comment comment = commentMapper.map(commentsDto, post, authService.getCurrentUser());
+        Post post= postRepository.findById(commentsDto.getPostId())
+                .orElseThrow(()->new PostNotFoundEXception(commentsDto.getPostId().toString()));
+        Comment comment=commentMapper.map(commentsDto,post,authService.getCurrentUser());
         commentRepository.save(comment);
+        String message=mailContentBuilder.build(post.getUser().getUsername()+" Commented On Your Post"+ POST_URL);
+        sendCommentNotification(message,post.getUser());
 
-        String message = mailContentBuilder.build(post.getUser().getUsername() + " posted a comment on your post." + POST_URL);
-        sendCommentNotification(message, post.getUser());
     }
 
     private void sendCommentNotification(String message, User user) {
-        mailService.sendMail(new NotificationEmail(user.getUsername() + " Commented on your post", user.getEmail(), message));
+        mailService.sendMail(new NotificationEmail(user.getUsername()+" Commented On Your Post",user.getEmail(),message));
     }
 
+
     public List<CommentsDto> getAllCommentsForPost(Long postId) {
-        Post post = postRepository.findById(postId).orElseThrow(() -> new PostNotFoundException(postId.toString()));
+        Post post = postRepository.findById(postId)
+                .orElseThrow(()->new PostNotFoundEXception(postId+" Not Found"));
         return commentRepository.findByPost(post)
                 .stream()
-                .map(commentMapper::mapToDto).toList();
+                .map(commentMapper::mapToDto)
+                .collect(toList());
+
     }
 
     public List<CommentsDto> getAllCommentsForUser(String userName) {
-        User user = userRepository.findByUsername(userName)
-                .orElseThrow(() -> new UsernameNotFoundException(userName));
+        User user=userRepository.findByUsername(userName)
+                .orElseThrow(()->new UsernameNotFoundException(userName));
         return commentRepository.findAllByUser(user)
                 .stream()
                 .map(commentMapper::mapToDto)
-                .toList();
-    }
-
-    public boolean containsSwearWords(String comment) {
-        if (comment.contains("shit")) {
-            throw new SpringRedditException("Comments contains unacceptable language");
-        }
-        return false;
+                .collect(toList());
     }
 }
